fixed tests to work with new security config. Changed filtering and sorting tests to work with new filtering and sorting method.